add index / add filter bar / add navbar / add route candidat & index / toggle js stimulus filterbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,1 @@
-<div class="container"><h1><%= link_to "Candidat", "/candidat", class: "nav-link" %></h1></div>
+<div class="container"><h1><%= link_to "Candidat", "/index", class: "nav-link" %></h1></div>
