--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
 <div class="navbar navbar-expand-sm">
-  <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="justify-content: flex-end;">
+  <div class="container-fluid" style="justify-content: flex-end;">
+    <div>
         <% if user_signed_in? %>
-            <%= link_to "/candidat", class: "navbar-brand" do %>
-              <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= link_to candidat_path, class: "navbar-brand" do %>
+              <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar" %>
             <% end %>
         <% else %>
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
