--- a/app/views/shared/_filterbar.html.erb
+++ b/app/views/shared/_filterbar.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div data-controller="toggle" data-toggle-value="true" class="bg-white py-1 shadow" style="cursor: pointer; border-radius: 10px;">
+  <div data-controller="toggle" class="bg-white py-1 shadow" style="cursor: pointer; border-radius: 10px;">
     <div data-action="click->toggle#toggle touch->toggle#toggle" class="d-flex" style="align-items: center; justify-content: space-between;">
       <h3 style="margin-left: 10px;">Filters</h3>
       <i data-toggle-target="caret" class="fa-solid fa-caret-down" aria-hidden="true" style="margin-right: 10px;"></i>
