--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,29 @@
 // Specific CSS for your home-page
+.right {
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  -webkit-clip-path: polygon(100% 100%, 0 100%, 100% 0);
+  clip-path: polygon(100% 100%, 0 100%, 100% 0);
+}
+
+.left {
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  -webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
+  clip-path: polygon(0 0, 0% 100%, 100% 0);
+}
+
+border {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  -webkit-clip-path: polygon(100% 0, 100% 2%, 0% 100%, 0% 98%);
+  clip-path: polygon(100% 0, 100% 2%, 0% 100%, 0% 98%);
+}
