--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,9 @@
-<div class="container"><h1><%= link_to "Candidat", "/index", class: "nav-link" %></h1></div>
+<div class="container">
+  <%= link_to "/index" do %>
+    <img class="left" src="https://picsum.photos/375/667?cimena" style="width: 100%; height: 100%">
+  <% end %>
+  <%= link_to "/index" do %>
+    <img class="right" src="https://picsum.photos/375/667?grayscale" style="width: 100%; height: 100%">
+  <% end %>
+</div>
+<border>
