--- a/app/views/candidats/show.html.erb
+++ b/app/views/candidats/show.html.erb
@@ -18,7 +18,7 @@
   <p>Prénom</p>
   <div class="bio">
     <strong>My bio:</strong>
-    <p><%= @candidat.bio %></p>
+    <p><%#= @candidat.bio %></p>
     <button type="button" data-bs-toggle="modal" data-bs-target="#bio">
       <i class="fa-solid fa-pen-to-square"></i>
     </button>
